--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">FlickList</string>
+    <string name="navigation_search_text">Search</string>
+    <string name="navigation_list_text">List</string>
 </resources>
