--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
     <string name="navigation_search_text">Search</string>
     <string name="navigation_list_text">List</string>
 
+    <string name="search_bar_hint">Search for a Movie</string>
+    <string name="search_button_text">Go!</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
