Fixed issue #3 Added password info

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="sign_up">Sign Up</string>
     <string name="save_username">Save Username</string>
     <string name="save_password">Save Password</string>
+    <string name="passwordAttributes">At least 6 characters, including numbers</string>
 
 </resources>
