Changed user facing instances of username with email

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="username_hint">Email</string>
     <string name="password">Password</string>
     <string name="sign_up">Sign Up</string>
-    <string name="save_username">Save Username</string>
+    <string name="save_username">Save Email</string>
     <string name="save_password">Save Password</string>
     <string name="passwordAttributes">At least 6 characters, including numbers</string>
 
