--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,13 +2,16 @@
     <string name="app_name">FlickList</string>
     <string name="navigation_search_text">Search</string>
     <string name="navigation_list_text">List</string>
+    <string name="toolbar_search">Search for a Movie</string>
+    <string name="toolbar_list">Saved Movies</string>
+    <string name="welcome_message">Welcome %1$s</string>
 
     <string name="search_bar_hint">Search for a Movie</string>
     <string name="search_button_text">Go!</string>
     <string name="add_to_movie_list">Add</string>
+    <string name="watched_text">Watched</string>
     <string name="already_in_movie_list">Added!</string>
 
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="login">Login</string>
     <string name="username">Username</string>
     <string name="username_hint">Email</string>
@@ -18,9 +21,9 @@
     <string name="save_password">Save Password</string>
     <string name="passwordAttributes">At least 6 characters, including numbers</string>
     
-    <string name="release_date">Released</string>
-    <string name="imdb_score">IMDB Score</string>
-    <string name="director_text">Director</string>
-    <string name="age_rating_text">Age Rating</string>
+    <string name="release_date">Released: %1$s</string>
+    <string name="imdb_score">IMDB Score: %1$s</string>
+    <string name="director_text">Director: %1$s</string>
+    <string name="age_rating_text">Age Rating: %1$s</string>
 
 </resources>
